Teensy tiny fix for word wrap in import plan table

--- a/frontend/resources/css/import.css
+++ b/frontend/resources/css/import.css
@@ -17,3 +17,7 @@
 	min-width: 0;
 	width: 0;
 }
+
+td {
+	word-break: break-all;
+}
